# DataPlotStudio

./: .env  .gitignore  CHANGELOG.md  README.md  dataplot_script.py  f_and_b.txt  main.py  pyproject.toml  requirements.txt  style.css  version.py
core/: aggregation_manager.py  code_exporter.py  data_handler.py  data_io_manager.py  data_mutator.py  help_manager.py  history_manager.py  logger.py  markdown_parser.py  plot_config_manager.py  plot_engine.py  project_manager.py  regression_analyser.py  resource_loader.py  subset_manager.py
core/plot_strategies/: area_strategy.py  bar_strategy.py  base_strategy.py  box_strategy.py  count_strategy.py  density2d_strategy.py  ecdf_strategy.py  eventplot_strategy.py  geospatial_strategy.py  gridded_strategies.py  heatmap_strategy.py  (+17 more)
resources/: autocomplete_keywords.py  help.sql  plot_studio_greeting.html  statistics_style.css  stats_test_result_greeting.html  template.html  tutorial.db  version.py  whats_new.html
test_data/: 2d_density.csv  area_plot.csv  bar_plot.csv  box_plot.csv  contour.csv  count_plot.csv  country.csv  data.csv  data.json  data.xlsx  heatmap.csv  hexbin_plot.csv  histogram.csv  kde_plot.csv  line_plot.csv  pie_chart.csv  scatter_plot.csv  stem.csv  violin_plot.csv
tests/: conftest.py
ui/: DataPlotStudioApp.py  FilterSyntaxHighlighter.py  LandingPage.py  LineNumberArea.py  PythonHighlighter.py  SubplotOverlay.py  animated_widgets.py  data_tab.py  data_table_model.py  dialogs.py  help_animation_engine.py  main_window.py  menu_bar.py  plot_tab.py  plot_tab_ui.py  status_bar.py  theme.py  workers.py
(+161 files in other folders)
